# keith-adhd-app

./: .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  README.md  __init__.py  cspell.json  mypy.ini  plan.md  pyproject.toml  pytest.ini  requirements.txt  run.py  run_app.py
app/backend/: app.py  hypercorn_config.toml  start_appservice.sh
app/backend/blueprints/: assistant.py  checkins.py  goals.py  tasks.py
app/backend/services/: tools.py
app/backend/static/assets/: index-9_sxcfan.js.map
app/backend/templates/: index.html
app/frontend/: .prettierignore  eslint.config.js  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
app/frontend/src/: App.tsx
instance/: memory.json
src/backend/: README.md  app.py  pyproject.toml
src/backend/templates/: index.html
tests/: conftest.py  test_goals.py  test_tasks.py
