[tool.poetry]
name = "keith-adhd-app"
version = "0.1.0"
description = "An ADHD task assistant to help manage tasks and maintain focus"
authors = ["Keith"]
readme = "README.md"
packages = [{ include = "src/backend" }]

[tool.poetry.dependencies]
python = "^3.9"
quart = "^0.19.0"
quart-schema = "^0.18.0"
hypercorn = "^0.14.3"
sqlalchemy = "^2.0.20"
aiosqlite = "^0.19.0"
python-dotenv = "^1.0.0"
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/app/frontend
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["app/frontend"]
